--- a/CSS JS Clock/index.html
+++ b/CSS JS Clock/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>JS + CSS Clock</title>
-    <link rel="icon" href="https://fav.farm/🔥" />
   </head>
   <body>
     <div class="clock">
@@ -48,9 +47,7 @@
         position: relative;
         width: 100%;
         height: 100%;
-        transform: translateY(
-          -3px
-        ); /* account for the height of the clock hands */
+        transform: translateY(-3px);
       }
 
       .hand {
@@ -59,6 +56,10 @@
         background: black;
         position: absolute;
         top: 50%;
+        transform-origin: 100%;
+        transform: rotate(90deg);
+        transition: all 0.5s;
+        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
       }
     </style>
 
