--- a/CSS JS Clock/index.html
+++ b/CSS JS Clock/index.html
@@ -13,14 +13,6 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
-
-    <script>
-      function setDate() {
-        const now = new Date();
-        const seconds = now.getSeconds();
-        console.log(seconds);
-      }
-      setInterval(setDate, 1000);
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
