--- a/CSS Variables/index.html
+++ b/CSS Variables/index.html
@@ -35,7 +35,7 @@
       <input id="base" type="color" name="base" value="#ffc600" />
     </div>
 
-    <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
+    <img src="cityscape.jpg" />
 
     <script src="script.js"></script>
   </body>
