--- a/Array Cardio 2/index.html
+++ b/Array Cardio 2/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://fav.farm/" />
   </head>
   <body>
-    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+    <p><em>Psst: have a look at the JavaScript Console</em></p>
     <script src="script.js"></script>
   </body>
 </html>
